[tool.poetry]
name = "inventory-sys"
version = "0.1.0"
description = ""
authors = ["juni0r <cesarlopezjr2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
